now fully compeleted

--- a/style.css
+++ b/style.css
@@ -346,7 +346,13 @@ padding-top: 20px;
     .flx-btn{
          display: flex;
          justify-content: center;
+         flex-wrap: wrap;
+         
     }
+    .flx-btn a button{
+       margin-bottom: 10px;
+        
+   }
     .nav-item{
         border-bottom: 1px solid rgba(85, 85, 85, 0.514);
     }
